fix broken links

--- a/ponder/team01.html
+++ b/ponder/team01.html
@@ -86,7 +86,7 @@
                   prompt for your operating system. Here are some quickstarts
                   for the
                   <a
-                    href="../resources/cmd-line-mac.html"
+                    href="https://byui-cit.github.io/advcss/resources/cmd-line-mac.html"
                     target="_blank"
                     rel="noreferrer"
                     style="outline: none"
@@ -94,7 +94,7 @@
                   >
                   and the
                   <a
-                    href="../resources/cmd-line-pc.html"
+                    href="https://byui-cit.github.io/advcss/resources/cmd-line-pc.html"
                     target="_blank"
                     rel="noreferrer"
                     style="outline: none"
