--- a/teacher/block/week01.html
+++ b/teacher/block/week01.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <title>BYU-Idaho WDD 330 | Instructor Preparation</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="stylesheet" href="../css/prism-coy.css" />
+    <link rel="stylesheet" href="../../css/prism-coy.css" />
     <link rel="stylesheet" href="../../css/course.css" />
   </head>
 
@@ -136,7 +136,9 @@
         </p>
         <p>
           This
-          <a href="../examples/poke-demo/index.html" target="_blank">example</a>
+          <a href="../../examples/poke-demo/index.html" target="_blank"
+            >example</a
+          >
           shows one way you could go. It uses arrow functions...if you poll your
           students and they feel uncomfortable with that, you could start your
           demo with traditional anonymous functions and work into arrows. Get as
@@ -246,7 +248,7 @@
         </p>
         <p>
           You could code up something like this
-          <a href="../examples/expenses/index.html" target="_blank"
+          <a href="../../examples/expenses/index.html" target="_blank"
             >Expense tracker</a
           >.
         </p>
@@ -365,7 +367,7 @@
       <!-- end #article -->
     </div>
 
-    <script src="../js/course.js"></script>
-    <script src="../js/prism.js"></script>
+    <script src="../../js/course.js"></script>
+    <script src="../../js/prism.js"></script>
   </body>
 </html>
