--- a/teacher/block/week02.html
+++ b/teacher/block/week02.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <title>BYU-Idaho WDD 330 | Instructor Preparation</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="stylesheet" href="../css/prism-coy.css" />
+    <link rel="stylesheet" href="../../css/prism-coy.css" />
     <link rel="stylesheet" href="../../css/course.css" />
   </head>
 
@@ -66,7 +66,7 @@
         </p>
         <p>
           You might then do something like this
-          <a href="../examples/quotes/index.html" target="_blank"
+          <a href="../../examples/quotes/index.html" target="_blank"
             >dynamic filterable list of quotes</a
           >.
         </p>
@@ -143,7 +143,7 @@
         <p>
           To help the students prepare for the individual activity you might do
           something like this
-          <a href="../examples/sw/index.html" target="_blank"
+          <a href="../../examples/sw/index.html" target="_blank"
             >SW Film information</a
           >
           app. It uses the HTML template element to model one way of providing
@@ -266,7 +266,7 @@ when a film is clicked:
       <!-- end #article -->
     </div>
 
-    <script src="../js/course.js"></script>
-    <script src="../js/prism.js"></script>
+    <script src="../../js/course.js"></script>
+    <script src="../../js/prism.js"></script>
   </body>
 </html>
