--- a/teacher/block/week03.html
+++ b/teacher/block/week03.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <title>BYU-Idaho WDD 330 | Instructor Preparation</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="stylesheet" href="../css/prism-coy.css" />
+    <link rel="stylesheet" href="../../css/prism-coy.css" />
     <link rel="stylesheet" href="../../css/course.css" />
   </head>
 
@@ -38,7 +38,7 @@
         <p>
           For this meeting I would recommend spending a lot of time on
           debugging. You could use this project
-          <a href="../examples/hikes/" target="_blank">hikes</a>
+          <a href="../../examples/hikes/" target="_blank">hikes</a>
           as a starting point. It has a lot of errors in it. Students can
           download it from here:
           <a href="https://byui-cit.github.io/wdd330/examples/hikes.zip"
@@ -229,6 +229,6 @@ function formDataToJSON(formElement) {
     </div>
 
     <script src="../js/course.js"></script>
-    <script src="../js/prism.js"></script>
+    <script src="../../js/prism.js"></script>
   </body>
 </html>
