--- a/teacher/block/week05.html
+++ b/teacher/block/week05.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <title>BYU-Idaho WDD 330 | Instructor Preparation</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="stylesheet" href="../css/prism-coy.css" />
+    <link rel="stylesheet" href="../../css/prism-coy.css" />
     <link rel="stylesheet" href="../../css/course.css" />
   </head>
 
@@ -54,7 +54,7 @@
         <ol>
           <li>
             Start by having the class download the
-            <a href="../examples/game.zip">code</a>
+            <a href="../../examples/game.zip">code</a>
             (http://byui-cit.github.io/wdd330/examples/game.zip). A big part of
             this exercise...and the reason we are giving them so much code to
             start with...is to practice reviewing someone else's code to figure
@@ -270,6 +270,6 @@ function loopy(ms) {
     </div>
 
     <script src="../js/course.js"></script>
-    <script src="../js/prism.js"></script>
+    <script src="../../js/prism.js"></script>
   </body>
 </html>
