--- a/teacher/block/week03.html
+++ b/teacher/block/week03.html
@@ -23,7 +23,7 @@
         <h3>L05 Midweek</h3>
         <p>
           The individual activity for this lesson is to apply more templating to
-          our site. We will pull the header and footer into files and loaf them
+          our site. We will pull the header and footer into files and load them
           in with JavaScript.
         </p>
         <p>
