--- a/ponder/week02-trello-block.html
+++ b/ponder/week02-trello-block.html
@@ -57,8 +57,11 @@
               yourself). Read the details of the card.
             </p>
             <p>
-              Make sure to <kbd>pull</kbd> any changes from GitHub before
-              proceeding. Next create a new branch called
+              Open up the project that you and your team should have setup in
+              the Team Activity 1. Most of the work you will be doing over the
+              first half of the course will be in this shared repository. Make
+              sure to <kbd>pull</kbd> any changes from GitHub before proceeding.
+              Next create a new branch called
               <kbd>initials--add cart broken</kbd>. So if the name name were
               John Doe the branch should be called
               <code>jd--add cart broken</code>
