remove calendly link

--- a/resources/scrum-team.html
+++ b/resources/scrum-team.html
@@ -45,10 +45,8 @@
           instructor.
         </p>
         <p>
-          You can sign up for a slot in
-          <a href="https://calendly.com/thompsonda/15min" target="_blank"
-            >Calendly</a
-          >, or you can arrange directly with the instructor.
+          Check with the instructor on how they would like you so schedule those
+          meetings.
         </p>
         <p>
           Ideally one could go and look at the code repository for your
