fix sitepoint link

--- a/ponder/team05.html
+++ b/ponder/team05.html
@@ -138,10 +138,20 @@
                 </li>
               </ul>
               <p>
-                Make each of the boxes links that will take you to
-                <kbd>product-listing/index.html</kbd> and pass the correct
-                category as part of the URL. (tents, backpacks, sleeping-bags,
-                hammocks)
+                Each of the category elements should link to
+                <kbd>product-listing/index.html</kbd>. Make sure to pass the
+                correct category as part of the URL. (tents, backpacks,
+                sleeping-bags, hammocks).
+              </p>
+              <p>
+                If you need a reminder of how to add a URL parameter to a link
+                check out the <code>template</code> that is still up in the
+                <code>head</code> of <kbd>src/index.html</kbd>. It has an
+                example of passing a parameter. Oh and after you look at it you
+                can remove that <code>template</code> element. We don't need it
+                in this page (<kbd>src/index.html</kbd>) anymore since we will
+                be building those in
+                <kbd>product-listing/index.html</kbd>
               </p>
               <!-- END STEP -->
             </li>
@@ -317,7 +327,7 @@ myList.init();</code></pre>
           <a
             href="https://github.com/matkat99/sleepoutside/tree/team5/src"
             target="_blank"
-            rel="noreferrer"
+            rel="noreferrer noopener"
             >click here for the instructor's solution</a
           >.
         </p>
