--- a/resources/syllabus-outside-block.html
+++ b/resources/syllabus-outside-block.html
@@ -132,12 +132,12 @@
           set up a special pricing for students of $13/semester. You must
           purchase an access code through the
           <a
-            href="https://www.byuistore.com/p-28053-sitepoint-premium-access-code.aspx"
+            href="https://www.byuistore.com/product/92160"
             target="_blank"
-            rel="noreferrer"
+            rel="noreferrer noopener"
             >BYU-Idaho bookstore
           </a>
-          (ISBN: 281000004207B). Then use the URL that accompanies the access
+          (ISBN: 2810000042072). Then use the URL that accompanies the access
           code to create a SitePoint Premium account.
         </p>
         <ol>
