--- a/resources/syllabus-outside.html
+++ b/resources/syllabus-outside.html
@@ -40,7 +40,7 @@
             <a
               href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Guide/Grammar_and_Types"
               target="_blank"
-              rel="noreferrer"
+              rel="noreferrer noopener"
               >Grammar and Types</a
             >.
           </li>
@@ -52,11 +52,14 @@
             <a
               href="https://livecodestream.dev/post/2020-06-05-15-must-know-javascript-array-methods/"
               target="_blank"
-              rel="noreferrer"
+              rel="noreferrer noopener"
               >15 Must-Know JavaScript Array Methods
             </a>
             OR complete the
-            <a href="https://javascript30.com" target="_blank"
+            <a
+              href="https://javascript30.com"
+              target="_blank"
+              rel="noreferrer noopener"
               >Array Cardio Day 1 lesson</a
             >
             from JavaScript30.com.
@@ -70,14 +73,14 @@
             <a
               href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Guide/Functions"
               target="_blank"
-              rel="noreferrer"
+              rel="noreferrer noopener"
               >MDN Functions</a
             >
             and
             <a
               href="https://www.javascripttutorial.net/javascript-callback/"
               target="_blank"
-              rel="noreferrer"
+              rel="noreferrer noopener"
               >JavaScript Callbacks</a
             >.
           </li>
@@ -87,7 +90,7 @@
             <a
               href="https://developer.mozilla.org/en-US/docs/Learn/JavaScript/Client-side_web_APIs/Manipulating_documents"
               target="_blank"
-              rel="noreferrer"
+              rel="noreferrer noopener"
               >MDN Manipulating Documents</a
             >.
           </li>
@@ -97,7 +100,7 @@
             <a
               href="https://developer.mozilla.org/en-US/docs/Learn/JavaScript/Building_blocks/Events"
               target="_blank"
-              rel="noreferrer"
+              rel="noreferrer noopener"
               >MDN Introduction to Events</a
             >.
           </li>
@@ -106,7 +109,7 @@
             <a
               href="https://github.com/yenrab/doing_stuff_with_web_things"
               target="_blank"
-              rel="noreferrer"
+              rel="noreferrer noopener"
               >Doing Stuff with Web Things</a
             >. It provides a basic review of HTML, CSS, and JS used together. It
             is available in PDF form along with all of the code examples and
@@ -114,7 +117,7 @@
             <a
               href="https://github.com/yenrab/doing_stuff_with_web_things"
               target="_blank"
-              rel="noreferrer"
+              rel="noreferrer noopener"
               >zip file from GitHub</a
             >.
           </li>
@@ -127,9 +130,9 @@
           set up a special pricing for students of $13/semester. You must
           purchase an access code through the
           <a
-            href="https://www.byuistore.com/product/22340"
+            href="https://www.byuistore.com/product/92160"
             target="_blank"
-            rel="noreferrer"
+            rel="noreferrer noopener"
             >BYU-Idaho bookstore
           </a>
           (ISBN: 2810000042072). Then use the URL that accompanies the access
@@ -141,13 +144,13 @@
             <a
               href="https://www.sitepoint.com/premium/books/html5-css3-for-the-real-world-2nd-edition"
               target="_blank"
-              rel="noreferrer"
+              rel="noreferrer noopener"
               >HTML5 &amp; CSS3 for the Real World: 2nd Edition (HCRW)</a
             >
             (available as part of your Sitepoint premium subscription)
           </li>
 
-          <!-- <li>Required: <a href="http://eloquentjavascript.net/index.html" target="_blank" rel="noreferrer">Eloquent JavaScript
+          <!-- <li>Required: <a href="http://eloquentjavascript.net/index.html" target="_blank" rel="noreferrer noopener">Eloquent JavaScript
                         (EJS)</a>
                 </li> -->
           <li>
@@ -155,7 +158,7 @@
             <a
               href="https://www.sitepoint.com/premium/books/javascript-novice-to-ninja-2nd-edition"
               target="_blank"
-              rel="noreferrer"
+              rel="noreferrer noopener"
               >JavaScript: Novice to Ninja</a
             >
             (available as part of your Sitepoint premium subscription)
@@ -167,7 +170,7 @@
             <a
               href="https://git-scm.com/downloads"
               target="_blank"
-              rel="noreferrer"
+              rel="noreferrer noopener"
               >Git</a
             >
             set up on your computer
@@ -180,7 +183,7 @@
           <a
             href="https://code.visualstudio.com/"
             target="_blank"
-            rel="noreferrer"
+            rel="noreferrer noopener"
             >VS Code</a
           >
           (https://code.visualstudio.com/): Free, Mac/Windows/Linux, a good
@@ -258,7 +261,7 @@
           <a
             href="universityandcitoutcomes.pdf"
             target="_blank"
-            rel="noreferrer"
+            rel="noreferrer noopener"
             >CIT Department and BYU-Idaho student learning outcomes</a
           >. The activities and assessments for this course are designed to give
           you opportunities to achieve these outcomes and evaluate you against
@@ -404,7 +407,7 @@
               title="Student Support"
               href="http://www.byui.edu/academic-support-centers"
               target="_blank"
-              rel="noreferrer"
+              rel="noreferrer noopener"
               rel="noopener"
               >Student Support
             </a>
