--- a/ponder/team08-block.html
+++ b/ponder/team08-block.html
@@ -83,7 +83,7 @@
                 that we need to authenticate with to retrieve the order
                 information has a login endpoint at this address:
               </p>
-              <pre><code class="lang-js">http://157.201.228.93:2992/login</code></pre>
+              <pre><code class="lang-js">http://server-nodejs.cit.byui.edu:3000/login</code></pre>
               <p>
                 We need to make a <code>POST</code> request to that address with
                 the email and password the user provides as the body. Just to
@@ -131,7 +131,7 @@
               <!-- BEGIN STEP -->
               <h3>Getting the orders</h3>
               <p>The orders we are looking for can be found at</p>
-              <pre><code class="lang-js">http://157.201.228.93:2992/orders</code></pre>
+              <pre><code class="lang-js">http://server-nodejs.cit.byui.edu:3000/orders</code></pre>
               <p>
                 If you make a <code>GET</code> request to that address however
                 you will get an error. This is a protected endpoint. We need to
