--- a/teacher/block/week04.html
+++ b/teacher/block/week04.html
@@ -25,8 +25,11 @@
           The individual activity for this lesson asks the students to finish
           the checkout process. They will need to create a checkout form, then
           submit the correct information to a server. The server lives at
-          <a href="http://157.201.228.93:2992/" target="_blank" rel="noreferrer"
-            >http://157.201.228.93:2992/</a
+          <a
+            href="http://server-nodejs.cit.byui.edu:3000/"
+            target="_blank"
+            rel="noreferrer"
+            >http://server-nodejs.cit.byui.edu:3000/</a
           >. Check to make sure it is up!
         </p>
         <h3>L08 End-of-Week</h3>
