--- a/teacher/week07.html
+++ b/teacher/week07.html
@@ -24,8 +24,11 @@
           The team activity for this week asks the students to finish the
           checkout process. They will need to create a checkout form, then
           submit the correct information to a server. The server lives at
-          <a href="http://157.201.228.93:2992/" target="_blank" rel="noreferrer"
-            >http://157.201.228.93:2992/</a
+          <a
+            href="http://server-nodejs.cit.byui.edu:3000/"
+            target="_blank"
+            rel="noreferrer"
+            >http://server-nodejs.cit.byui.edu:3000/</a
           >. Check to make sure it is up!
         </p>
 
