--- a/ponder/team03-v2.html
+++ b/ponder/team03-v2.html
@@ -91,7 +91,9 @@
                 new command to our <kbd>package.json</kbd> file. Add the
                 following: <code>"preview": "vite preview",</code> to the
                 scripts section, then run it. Check to see what still works and
-                what is broken.
+                what is broken. (You always need run
+                <kbd>npm run build</kbd> before you run
+                <kbd>npm run preview</kbd> after you have made any changes.)
               </p>
               <p>
                 When we made the changes to the product details page last week,
