--- a/ponder/team03-v2.html
+++ b/ponder/team03-v2.html
@@ -170,6 +170,11 @@ build: {
                 You should move the <kbd>images</kbd> directory into the
                 <kbd>public</kbd> directory as well.
               </p>
+              <p>
+                Someone on the team should check the build periodically to make
+                sure it is not broken. A good time to do this would be each time
+                a pull request is merged!
+              </p>
               <!-- END STEP -->
             </li>
             <li>
