--- a/ponder/team05-v2.html
+++ b/ponder/team05-v2.html
@@ -64,12 +64,17 @@
               <h3>Refactor</h3>
               <p>
                 Create a new directory in <kbd>src</kbd> called
-                <kbd>product-listing</kbd>, and create an HTML file in it. Also
-                create a <kbd>product-listing.js</kbd> file in the JS directory.
-                Add the HTML to our new page to get the foundation up...header,
-                footer, styles, etc. (Hint...you may just want to use
-                src/index.html as a starting point. Then remove the banner and
-                text.)
+                <kbd>product-listing</kbd>, and create an
+                <kbd>index.html</kbd> file in it. Also create a
+                <kbd>product-listing.js</kbd> file in the JS directory. Add the
+                HTML to our new page to get the foundation up...header, footer,
+                styles, etc. (Hint...you may just want to use src/index.html as
+                a starting point. Then remove the banner and text.)
+              </p>
+              <p class="callout">
+                We just added a new page to the site. Remember to update your
+                <kbd>vite.config.js</kbd> file to let Vite know about it or you
+                will break the build!
               </p>
               <p>
                 Move the JS from the <kbd>main.js</kbd> that is responsible to
