--- a/ponder/team01-v2.html
+++ b/ponder/team01-v2.html
@@ -293,7 +293,8 @@
                   enter <code>npm run build</code>. Then "Deploy Site". Netlify
                   will produce a randomized URL for the site that should be
                   shared with all the team members. This is the link to your
-                  "production" site.
+                  "production" site. (You could even put this into the
+                  <kbd>Readme.md</kbd> file to make it easy to find!)
                   <p class="callout">
                     The <kbd>build</kbd> version of the site will be considered
                     the production version. This should always work! The
