--- a/ponder/team02-v2.html
+++ b/ponder/team02-v2.html
@@ -83,7 +83,7 @@
                   Our goal will be to eventually have a one to one relationship
                   with views/pages and modules. Then any functionality that
                   needs to be shared between modules can be placed in a utility
-                  modules.
+                  module.
                 </li>
                 <li>
                   We will begin now by creating a module
