--- a/prepare/info/index.html
+++ b/prepare/info/index.html
@@ -24,34 +24,34 @@
 
         <ol>
           <li>
-            <a href="week01.html" target="_blank">Week 01</a>
+            <a href="week01.html">Week 01</a>
           </li>
           <li>
-            <a href="week02.html" target="_blank">Week 02</a>
+            <a href="week02.html">Week 02</a>
           </li>
           <li>
-            <a href="week03.html" target="_blank">Week 03</a>
+            <a href="week03.html">Week 03</a>
           </li>
           <li>
-            <a href="week04.html" target="_blank">Week 04</a>
+            <a href="week04.html">Week 04</a>
           </li>
           <li>
-            <a href="week05.html" target="_blank">Week 05</a>
+            <a href="week05.html">Week 05</a>
           </li>
           <li>
-            <a href="week06.html" target="_blank">Week 06</a>
+            <a href="week06.html">Week 06</a>
           </li>
           <li>
-            <a href="week07.html" target="_blank">Week 07</a>
+            <a href="week07.html">Week 07</a>
           </li>
           <li>
-            <a href="week08.html" target="_blank">Week 08</a>
+            <a href="week08.html">Week 08</a>
           </li>
           <li>
-            <a href="week09.html" target="_blank">Week 09</a>
+            <a href="week09.html">Week 09</a>
           </li>
           <li>
-            <a href="week10.html" target="_blank">Week 10</a>
+            <a href="week10.html">Week 10</a>
           </li>
         </ol>
       </main>
