--- a/prepare/info/week01.html
+++ b/prepare/info/week01.html
@@ -54,10 +54,9 @@
 
             <li>
               <p>
-                Don't skip the code examples! Make sure to spend time reviewing
-                these. With the book we are using you can actually interact with
-                the code samples directly. If you have time you should also work
-                through the exercises at the end of each chapter.
+                Don't skip the code examples and exercises! Make sure to spend
+                time reviewing these. In fact a solved exercise can certainly
+                count as notes!
               </p>
             </li>
             <li>
