update github course link

--- a/ponder/team01-v2.html
+++ b/ponder/team01-v2.html
@@ -37,12 +37,12 @@
           "main driver" of the coding.
         </p>
         <p>
-          It will be very helpful if you have completed the Sitepoint course on
+          It will be very helpful if you have completed the Github course:
           <a
-            href="https://www.sitepoint.com/premium/courses/git-it-together-master-version-control-with-git-and-github-2902/"
+            href="https://github.com/skills/introduction-to-github"
             target="_blank"
             rel="noreferrer"
-            >Git It Together</a
+            >Introduction to Github</a
           >
           before you do this.
         </p>
