--- a/prepare/info/week01.html
+++ b/prepare/info/week01.html
@@ -195,7 +195,7 @@
           <li>
             Complete the
             <a
-              href="https://www.sitepoint.com/premium/courses/git-it-together-master-version-control-with-git-and-github-2902/"
+              href="https://github.com/skills/introduction-to-github"
               target="_blank"
               rel="noreferrer"
               >Introduction to Github</a
