--- a/ponder/team02-v2.html
+++ b/ponder/team02-v2.html
@@ -267,7 +267,7 @@ const product = urlParams.get('product')
             </code></pre>
               <p>
                 Use those lines to create a new function in the
-                <kbd>utils.js</kbd> file called
+                <kbd>utils.mjs</kbd> file called
                 <code>getParam(param)</code> that we can use to get a parameter
                 from the URL when we need to. (Don't forget to return the
                 parameter!)
