--- a/ponder/team01-v2.html
+++ b/ponder/team01-v2.html
@@ -169,10 +169,10 @@
                       <code>scripts</code> are shortcuts to commands we can run
                       to manage the project. It contains the following:
                       <pre><code class="lang-json">"scripts": {
-    "start": "snowpack dev",
-    "build": "snowpack build",
-    "lint": "eslint *.js src/**/*.js",
-    "format": "prettier --ignore-path ./.gitignore --write \"./**/*.{html,json,js,ts,css}\""
+  "start": "vite",
+  "build": "vite build --emptyOutDir",
+  "lint": "eslint *.js src/**/*.js",
+  "format": "prettier --ignore-path ./.gitignore --write \"./**/*.{html,json,js,ts,css}\"",
 },</code></pre>
                     </li>
                   </ul>
