--- a/prepare/info/week01.html
+++ b/prepare/info/week01.html
@@ -176,7 +176,7 @@
           <li>
             Read through this short article about
             <a
-              href="../resources/workflow-info-only.html"
+              href="../../resources/workflow-info-only.html"
               target="_blank"
               rel="noreferrer"
               >Managing the Modern Frontend Workflow</a
@@ -185,7 +185,7 @@
           <li>
             Complete the
             <a
-              href="../resources/course-setup.html"
+              href="../../resources/course-setup.html"
               target="_blank"
               rel="noreferrer"
               >Course Setup</a
