anoterh path change

--- a/prepare/info/week01.html
+++ b/prepare/info/week01.html
@@ -185,7 +185,7 @@
           <li>
             Complete the
             <a
-              href="../../resources/course-setup.html"
+              href="../../resources/course-setup-v2.html"
               target="_blank"
               rel="noreferrer"
               >Course Setup</a
