update setup link

--- a/ponder/team01-v2.html
+++ b/ponder/team01-v2.html
@@ -73,7 +73,7 @@
               <ol>
                 <li>
                   Each member of the team should have already completed the
-                  <a href="../resources/course-setup.html">course setup</a>
+                  <a href="../resources/course-setup-v2.html">course setup</a>
                   activity. Go and do that now if you have not.
                 </li>
                 <li>
